--- a/views/admin/categories/new.ejs
+++ b/views/admin/categories/new.ejs
@@ -5,8 +5,12 @@
     <div class="card p-2 p-5 m-5 shadow">
         <div class="card-header mb-3">Cadastro categoria</div>
             <div class="card-body">
-                  <input class="form-control" type="text" placeholder="defina o titulo da categoria">
-                  <button class="btn btn-primary mt-3 ">cadastrar titulo</button>
+
+                <form method="POST" action="/categories/save">
+                    <input class="form-control" type="text"  name="title" placeholder="defina o titulo da categoria">
+                    <button class="btn btn-primary mt-3 ">cadastrar titulo</button>
+                </form>
+                
             </div>
     </div>
 </div>
