--- a/views/admin/categories/new.ejs
+++ b/views/admin/categories/new.ejs
@@ -2,7 +2,7 @@
 <%- include("../../partials/navbar.ejs") %>
 
 <div class="container">
-    <div class="card p-2 p-5 m-5 shadow">
+    <div class="card p-2 p-5 m-5 shadow-sm">
         <div class="card-header mb-3">Cadastro categoria</div>
             <div class="card-body">
 
