Add buttons and routes

--- a/views/admin/categories/new.ejs
+++ b/views/admin/categories/new.ejs
@@ -3,7 +3,7 @@
 
 <div class="container">
     <div class="card p-2 p-5 m-5 shadow-sm">
-        <div class="card-header mb-3">Cadastro categoria</div>
+        <div class="card-header mb-3"> <h4>Cadastrar categoria</h4> </div>
             <div class="card-body">
 
                 <form method="POST" action="/categories/save">
