--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,11 @@
 <nav class="navbar navbar-light bg-primary">
-<a class="navbar-brand text-light" href="/">
-PixelClocksStudio-blog
-</a>
+                  <a class="navbar-brand text-light" href="/admin/categories/new">
+                  PixelClocksStudio
+                  </a>
+
+                  <ul class="navbar-nav me-auto">
+                                    <li class="nav-item">
+                                                      <a class="nav-link text-light" href="/admin/categories">Categorias</a>
+                                    </li>
+                  </ul>
 </nav>
