--- a/views/admin/categories/index.ejs
+++ b/views/admin/categories/index.ejs
@@ -1,9 +1,10 @@
 <%- include("../../partials/header.ejs") %>
 <%- include("../../partials/navbar.ejs") %>
 
-<h2>Categorias</h2>
 <div class="container">
+                  <h4 class="my-3">Categorias</h4>
 
+                  <a href="/admin/categories/new" class="btn btn-info my-3">criar nova categoria</a>
 
 <table class="table table-light table-striped shadow-sm">
                   <thead>
@@ -21,7 +22,10 @@
                                                                         <th><%= category.id %> </th>
                                                                         <th><%= category.title %></th>
                                                                         <th><%= category.slug %></th>
-                                                                        <th></th>
+                                                                        <th>
+                                                                                          <button class="btn btn-warning">editar</button>
+                                                                                          <button class="btn btn-danger">deletar</button>
+                                                                        </th>
                                                       </tr>
 
                                                       <% }) %> 
