--- a/views/admin/categories/index.ejs
+++ b/views/admin/categories/index.ejs
@@ -24,7 +24,11 @@
                                                                         <th><%= category.slug %></th>
                                                                         <th>
                                                                                           <button class="btn btn-warning">editar</button>
+
+                                                                                          <form method="POST" action="/categories/delete" style="display:inline;">
+                                                                                          <input type="hidden" name="id" value="<%= category.id %> ">
                                                                                           <button class="btn btn-danger">deletar</button>
+                                                                                          </form>
                                                                         </th>
                                                       </tr>
 
